--- a/WPF/WPF/MainWindow.xaml
+++ b/WPF/WPF/MainWindow.xaml
@@ -3,10 +3,40 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:vm="clr-namespace:ViewModel;assembly=ViewModel"
+        xmlns:model="clr-namespace:Models;assembly=Models"
         xmlns:local="clr-namespace:WPF"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
+    <Window.DataContext>
+        <vm:MainViewModel/>
+    </Window.DataContext>
+    <Window.Resources>
+        <DataTemplate DataType="{x:Type model:User}">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+                <TextBlock Text="First Name:"/>
+                <TextBlock Grid.Row="1" Text="Surname:"/>
+                <TextBlock Grid.Row="2" Text="ID:"/>
+
+                <TextBox Grid.Column="1" Text="{Binding FirstName}"/>
+                <TextBox Grid.Column="1" Grid.Row="1" Text="{Binding Surname}"/>
+                <TextBox Grid.Column="1" Grid.Row="2" Text="{Binding ID}"/>
+
+                <Button Content="Delete" Grid.Row="3" Command="{Binding ElementName=users, Path=DataContext.DeleteCommand, PresentationTraceSources.TraceLevel=High}"/>
+            </Grid>
+        </DataTemplate>
+    </Window.Resources>
     <Grid>
-        
+        <ListView x:Name="users" ItemsSource="{Binding Users}" SelectedValue="{Binding SelectedUser}"/>
     </Grid>
 </Window>
