--- a/WPF/WPF/MainWindow.xaml
+++ b/WPF/WPF/MainWindow.xaml
@@ -4,39 +4,37 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:vm="clr-namespace:ViewModel;assembly=ViewModel"
-        xmlns:model="clr-namespace:Models;assembly=Models"
         xmlns:local="clr-namespace:WPF"
+        xmlns:uc="clr-namespace:WPF_UserControls;assembly=WPF_UserControls"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Window.DataContext>
         <vm:MainViewModel/>
     </Window.DataContext>
     <Window.Resources>
-        <DataTemplate DataType="{x:Type model:User}">
-            <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition/>
-                    <RowDefinition/>
-                    <RowDefinition/>
-                    <RowDefinition/>
-                </Grid.RowDefinitions>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition/>
-                    <ColumnDefinition/>
-                </Grid.ColumnDefinitions>
-                <TextBlock Text="First Name:"/>
-                <TextBlock Grid.Row="1" Text="Surname:"/>
-                <TextBlock Grid.Row="2" Text="ID:"/>
-
-                <TextBox Grid.Column="1" Text="{Binding FirstName}"/>
-                <TextBox Grid.Column="1" Grid.Row="1" Text="{Binding Surname}"/>
-                <TextBox Grid.Column="1" Grid.Row="2" Text="{Binding ID}"/>
-
-                <Button Content="Delete" Grid.Row="3" Command="{Binding ElementName=users, Path=DataContext.DeleteCommand, PresentationTraceSources.TraceLevel=High}"/>
-            </Grid>
+        <DataTemplate x:Key="dtUser">
+            <uc:User/>
         </DataTemplate>
     </Window.Resources>
     <Grid>
-        <ListView x:Name="users" ItemsSource="{Binding Users}" SelectedValue="{Binding SelectedUser}"/>
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <ListView x:Name="Users" Grid.ColumnSpan="5" Grid.RowSpan="3" ItemsSource="{Binding Users}" SelectedValue="{Binding SelectedUser}" ItemTemplate="{StaticResource dtUser}"/>
+        <Button Content="Save" Grid.Row="3"/>
+        <Button Content="Edit" Grid.Row="3" Grid.Column="1"/>
+        <Button Content="Create" Grid.Row="3" Grid.Column="2"/>
+        <Button Content="Update" Grid.Row="3" Grid.Column="3"/>
+        <Button Content="Delete" Grid.Row="3" Grid.Column="4" Command="{Binding DeleteCommand}" CommandParameter="{Binding ElementName=Users, Path=SelectedItems}"/>
     </Grid>
 </Window>
