--- a/WPF/WPF/MainWindow.xaml
+++ b/WPF/WPF/MainWindow.xaml
@@ -6,6 +6,7 @@
         xmlns:vm="clr-namespace:ViewModel;assembly=ViewModel"
         xmlns:local="clr-namespace:WPF"
         xmlns:uc="clr-namespace:WPF_UserControls;assembly=WPF_UserControls"
+        xmlns:printing="clr-namespace:WPF_UserControls.Printing;assembly=WPF_UserControls"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Window.DataContext>
@@ -14,6 +15,9 @@
     <Window.Resources>
         <DataTemplate x:Key="dtUser">
             <uc:User/>
+        </DataTemplate>
+        <DataTemplate DataType="{x:Type vm:LoanConfirmationViewModel}">
+            <printing:LoanConfirmation/>
         </DataTemplate>
     </Window.Resources>
     <Grid>
@@ -30,7 +34,8 @@
             <ColumnDefinition/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
-        <ListView x:Name="Users" Grid.ColumnSpan="5" Grid.RowSpan="3" ItemsSource="{Binding Users}" SelectedValue="{Binding SelectedUser}" ItemTemplate="{StaticResource dtUser}"/>
+        <ContentControl Grid.ColumnSpan="5" Grid.RowSpan="3" Content="{Binding CurrentViewModel}"/>
+        <!--<ListView x:Name="Users" Grid.ColumnSpan="5" Grid.RowSpan="3" ItemsSource="{Binding Users}" SelectedValue="{Binding SelectedUser}" ItemTemplate="{StaticResource dtUser}"/>-->
         <Button Content="Save" Grid.Row="3"/>
         <Button Content="Edit" Grid.Row="3" Grid.Column="1"/>
         <Button Content="Create" Grid.Row="3" Grid.Column="2"/>
