--- a/WPF/WPF/MainWindow.xaml
+++ b/WPF/WPF/MainWindow.xaml
@@ -25,7 +25,7 @@
             <RowDefinition/>
             <RowDefinition/>
             <RowDefinition/>
-            <RowDefinition/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
@@ -35,7 +35,6 @@
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
         <ContentControl Grid.ColumnSpan="5" Grid.RowSpan="3" Content="{Binding CurrentViewModel}"/>
-        <!--<ListView x:Name="Users" Grid.ColumnSpan="5" Grid.RowSpan="3" ItemsSource="{Binding Users}" SelectedValue="{Binding SelectedUser}" ItemTemplate="{StaticResource dtUser}"/>-->
         <Button Content="Save" Grid.Row="3"/>
         <Button Content="Edit" Grid.Row="3" Grid.Column="1"/>
         <Button Content="Create" Grid.Row="3" Grid.Column="2"/>
