--- a/WPF/WPF_UserControls/Printing/LoanConfirmation.xaml
+++ b/WPF/WPF_UserControls/Printing/LoanConfirmation.xaml
@@ -7,7 +7,7 @@
              xmlns:vm="clr-namespace:ViewModel;assembly=ViewModel"
              xmlns:local="clr-namespace:WPF_UserControls.Printing"
              mc:Ignorable="d" 
-             Height="29.7cm" Width="21cm" d:DataContext="{d:DesignInstance vm:LoanConfirmationViewModel}">
+             d:DataContext="{d:DesignInstance vm:LoanConfirmationViewModel}">
     <UserControl.Resources>
         <DataTemplate DataType="{x:Type model:LoanPurpose}">
             <TextBlock>
@@ -15,65 +15,72 @@
             </TextBlock>
         </DataTemplate>
     </UserControl.Resources>
-    <FlowDocument ColumnWidth="21cm" PageWidth="21cm" PageHeight="29.7cm">
-        <Paragraph>
-            <TextBlock Width="779" Height="141">
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
+
+        <FlowDocumentReader>
+            <FlowDocument ColumnWidth="21cm" PageWidth="21cm" PageHeight="29.7cm" x:Name="FlowDocument">
+                <Paragraph>
+                    <TextBlock Width="779" Height="141">
                 Hello <Run Text="{Binding GreetingTitle}"/>,<LineBreak/>
                 We are happy to inform you that your application was successful.<LineBreak/>
                 This means that the amount you requested <Run DataContext="{Binding Application}" Text="{Binding Advance}"/> will be paid into your account.
-            </TextBlock>
-        </Paragraph>
-        <Paragraph>
-            <TextBlock>
-                <TextBlock.Text>
-                    Some text here
-                </TextBlock.Text>
-                <TextBlock.Effect>
-                    <DropShadowEffect BlurRadius="12" Color="Orange" Opacity="1" ShadowDepth="0" RenderingBias="Quality"/>
-                </TextBlock.Effect>
-            </TextBlock>
-        </Paragraph>
-        <List>
-            <ListItem>
-                <Paragraph>
-                    <TextBlock>First item in the list</TextBlock>
-                    <Rectangle Height="40" Width="40" Fill="Aquamarine">
-                        <Rectangle.Effect>
-                            <BlurEffect Radius="15"/>
-                        </Rectangle.Effect>
-                    </Rectangle>
-                    <Ellipse Height="40" Width="40" Fill="IndianRed">
-                        <Ellipse.Effect>
-                            <DropShadowEffect ShadowDepth="0" Color="BlueViolet" Opacity="1" BlurRadius="15"/>
-                        </Ellipse.Effect>
-                    </Ellipse>
-                    <Rectangle Width="40" Height="20" Fill="ForestGreen"/>
-                    <Border Height="40" Width="20" Background="ForestGreen" CornerRadius="5"/>
-                    <Border Height="40" Width="40" Background="Aquamarine" CornerRadius="5"/>
+                    </TextBlock>
                 </Paragraph>
-            </ListItem>
-            <ListItem>
                 <Paragraph>
-                    <Viewbox RenderTransformOrigin="0.5,0.5">
-                        <Viewbox.RenderTransform>
-                            <TransformGroup>
-                                <ScaleTransform ScaleX="0.4" ScaleY="0.4"/>
-                                <SkewTransform/>
-                                <RotateTransform/>
-                                <TranslateTransform/>
-                            </TransformGroup>
-                        </Viewbox.RenderTransform>
-                        <Polyline
+                    <TextBlock>
+                        <TextBlock.Text>
+                            Some text here
+                        </TextBlock.Text>
+                        <TextBlock.Effect>
+                            <DropShadowEffect BlurRadius="12" Color="Orange" Opacity="1" ShadowDepth="0" RenderingBias="Quality"/>
+                        </TextBlock.Effect>
+                    </TextBlock>
+                </Paragraph>
+                <List>
+                    <ListItem>
+                        <Paragraph>
+                            <TextBlock>First item in the list</TextBlock>
+                            <Rectangle Height="40" Width="40" Fill="Aquamarine">
+                                <Rectangle.Effect>
+                                    <BlurEffect Radius="15"/>
+                                </Rectangle.Effect>
+                            </Rectangle>
+                            <Ellipse Height="40" Width="40" Fill="IndianRed">
+                                <Ellipse.Effect>
+                                    <DropShadowEffect ShadowDepth="0" Color="BlueViolet" Opacity="1" BlurRadius="15"/>
+                                </Ellipse.Effect>
+                            </Ellipse>
+                            <Rectangle Width="40" Height="20" Fill="ForestGreen"/>
+                            <Border Height="40" Width="20" Background="ForestGreen" CornerRadius="5"/>
+                            <Border Height="40" Width="40" Background="Aquamarine" CornerRadius="5"/>
+                        </Paragraph>
+                    </ListItem>
+                    <ListItem>
+                        <Paragraph>
+                            <Viewbox RenderTransformOrigin="0.5,0.5">
+                                <Viewbox.RenderTransform>
+                                    <TransformGroup>
+                                        <ScaleTransform ScaleX="0.4" ScaleY="0.4"/>
+                                        <SkewTransform/>
+                                        <RotateTransform/>
+                                        <TranslateTransform/>
+                                    </TransformGroup>
+                                </Viewbox.RenderTransform>
+                                <Polyline
                             Points="10,110 60,10 110,110 105,110 60,18 15,110 10,110"
                             Stroke="#BB0000"
                             Fill="#FF0000"
                             StrokeThickness="2" >
-                            <Polyline.Effect>
-                                <DropShadowEffect Color="#FF9999" ShadowDepth="0" Direction="0" BlurRadius="25"  />
-                            </Polyline.Effect>
-                        </Polyline>
+                                    <Polyline.Effect>
+                                        <DropShadowEffect Color="#FF9999" ShadowDepth="0" Direction="0" BlurRadius="25"  />
+                                    </Polyline.Effect>
+                                </Polyline>
 
-                        <!--<Polyline
+                                <!--<Polyline
                             Points="10,105 110,105 110,10 115,10 115,110 10,110 10,105"
                             Stroke="#00BB00"
                             Fill="#00FF00"
@@ -83,12 +90,15 @@
                                 <DropShadowEffect Color="#99FF99" ShadowDepth="0" Direction="0" BlurRadius="25"  />
                             </Polyline.Effect>
                         </Polyline>-->
-                    </Viewbox>
-                </Paragraph>
-            </ListItem>
-        </List>
-        <BlockUIContainer DataContext="{Binding Application}">
-            <ListView ItemsSource="{Binding Breakdown}"/>
-        </BlockUIContainer>
-    </FlowDocument>
+                            </Viewbox>
+                        </Paragraph>
+                    </ListItem>
+                </List>
+                <BlockUIContainer DataContext="{Binding Application}">
+                    <ListView ItemsSource="{Binding Breakdown}"/>
+                </BlockUIContainer>
+            </FlowDocument>
+        </FlowDocumentReader>
+        <Button Grid.Row="1" Content="Print" Command="{Binding PrintCommand}" CommandParameter="{Binding ElementName=FlowDocument}"/>
+    </Grid>
 </UserControl>
