--- a/WPF/WPF/MainWindow.xaml
+++ b/WPF/WPF/MainWindow.xaml
@@ -4,25 +4,15 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:vm="clr-namespace:ViewModel;assembly=ViewModel"
-        xmlns:local="clr-namespace:WPF"
-        xmlns:uc="clr-namespace:WPF_UserControls;assembly=WPF_UserControls"
-        xmlns:printing="clr-namespace:WPF_UserControls.Printing;assembly=WPF_UserControls"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Window.DataContext>
         <vm:MainViewModel/>
     </Window.DataContext>
-    <Window.Resources>
-        <DataTemplate x:Key="dtUser">
-            <uc:User/>
-        </DataTemplate>
-        <DataTemplate DataType="{x:Type vm:LoanConfirmationViewModel}">
-            <printing:LoanConfirmation/>
-        </DataTemplate>
-    </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
@@ -31,6 +21,7 @@
             <ColumnDefinition/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
-        <ContentControl Grid.ColumnSpan="5" Content="{Binding CurrentViewModel}"/>
+        <ContentControl Grid.ColumnSpan="5" />
+        <Button Grid.Row="1" Content="Render" Click="btnRender_Click"/>
     </Grid>
 </Window>
