--- a/WPF/WPF/App.xaml
+++ b/WPF/WPF/App.xaml
@@ -2,8 +2,12 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:WPF"
+             xmlns:printing="clr-namespace:WPF_UserControls.Printing;assembly=WPF_UserControls"
+             xmlns:vm="clr-namespace:ViewModel;assembly=ViewModel"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <DataTemplate DataType="{x:Type vm:ClientCreditReportViewModel}">
+            <printing:ClientCreditReport/>
+        </DataTemplate>
     </Application.Resources>
 </Application>
