Added unity IoC and started on functionality change

--- a/WPF/WPF/RenderWindow.xaml
+++ b/WPF/WPF/RenderWindow.xaml
@@ -6,5 +6,6 @@
         xmlns:local="clr-namespace:WPF"
         mc:Ignorable="d"
         Title="RenderWindow" Height="450" Width="800">
-    <ContentControl Content="{Binding .}" Name="IAmGroot"/>
+    <!--<ContentControl Content="{Binding ., PresentationTraceSources.TraceLevel=High}" Name="IAmGroot"/>-->
+    <TextBlock Text="aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabbbb" TextWrapping="WrapWithOverflow" HorizontalAlignment="Left" VerticalAlignment="Top"/>
 </Window>
