--- a/WPF/WPF/App.xaml
+++ b/WPF/WPF/App.xaml
@@ -14,5 +14,94 @@
         <DataTemplate DataType="{x:Type vm:LargeDataViewModel}">
             <uc:LargeData/>
         </DataTemplate>
+        <Style x:Key="VeryNiceAndCleanToggleButton" TargetType="{x:Type ToggleButton}">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type ToggleButton}">
+                        <Grid x:Name="toggleSwitch">
+                            <Border x:Name="Border" CornerRadius="10"
+        Background="#FFFFFFFF"
+        Width="80" Height="25">
+                                <Border.Effect>
+                                    <DropShadowEffect ShadowDepth="0.5" Direction="0" Opacity="0.3" />
+                                </Border.Effect>
+                                <Ellipse x:Name="Ellipse" Fill="#FFFFFFFF" Stretch="Uniform"
+             Margin="2 2 2 1"
+             Stroke="Gray" StrokeThickness="0.2"
+             HorizontalAlignment="Left" Width="22" >
+                                    <Ellipse.Effect>
+                                        <DropShadowEffect BlurRadius="10" ShadowDepth="1" Opacity="0.3" Direction="260" />
+                                    </Ellipse.Effect>
+                                </Ellipse>
+                            </Border>
+
+                            <TextBlock x:Name="txtOff" Text="OFF" Margin="0 0 40 0" VerticalAlignment="Center" FontWeight="DemiBold" HorizontalAlignment="Right" Foreground="White" FontSize="12" />
+                            <TextBlock x:Name="txtOn" Text="ON" Margin="40 0 0 0" VerticalAlignment="Center" FontWeight="DemiBold"  Foreground="White" HorizontalAlignment="Left" FontSize="12" />
+                        </Grid>
+
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="ToggleButton.IsChecked" Value="True" >
+                                <Trigger.EnterActions>
+
+                                    <BeginStoryboard>
+
+                                        <Storyboard>
+                                            <ColorAnimation Storyboard.TargetName="Border"
+                                Storyboard.TargetProperty="(Border.Background).(SolidColorBrush.Color)"
+                                To="#34A543"
+                                Duration="0:0:0.1" />
+
+                                            <ThicknessAnimation Storyboard.TargetName="Ellipse"
+                                    Storyboard.TargetProperty="Margin"
+                                    To="56 2 2 1"
+                                    Duration="0:0:0.1" />
+                                            <DoubleAnimation
+                            Storyboard.TargetName="txtOff" 
+                            Storyboard.TargetProperty="(TextBlock.Opacity)"
+                            From="1.0" To="0.0" Duration="0:0:0:0.1"     />
+                                            <DoubleAnimation
+                            Storyboard.TargetName="txtOn" 
+                            Storyboard.TargetProperty="(TextBlock.Opacity)"
+                            From="0.0" To="1.0" Duration="0:0:0:0.1"  />
+                                        </Storyboard>
+                                    </BeginStoryboard>
+                                </Trigger.EnterActions>
+                                <!--  some out fading  -->
+                                <Trigger.ExitActions>
+                                    <BeginStoryboard>
+                                        <Storyboard>
+                                            <ColorAnimation Storyboard.TargetName="Border"
+                                Storyboard.TargetProperty="(Border.Background).(SolidColorBrush.Color)"
+                                To="#C2283B"
+                                Duration="0:0:0.1" />
+                                            <ThicknessAnimation Storyboard.TargetName="Ellipse"
+                                    Storyboard.TargetProperty="Margin"
+                                    To="2 2 2 1"
+                                    Duration="0:0:0.1" />
+                                            <DoubleAnimation
+                            Storyboard.TargetName="txtOff" 
+                            Storyboard.TargetProperty="(TextBlock.Opacity)"
+                            From="0" To="1.0" Duration="0:0:0:0.1"       />
+                                            <DoubleAnimation
+                            Storyboard.TargetName="txtOn" 
+                            Storyboard.TargetProperty="(TextBlock.Opacity)"
+                            From="1.0" To="0.0" Duration="0:0:0:0.1" />
+                                        </Storyboard>
+                                    </BeginStoryboard>
+                                </Trigger.ExitActions>
+                                <Setter Property="Foreground" Value="{DynamicResource IdealForegroundColorBrush}" />
+                            </Trigger>
+                            <Trigger Property="IsMouseOver" Value="False">
+                            </Trigger>
+
+                            <Trigger Property="IsEnabled" Value="False">
+                                <Setter Property="Foreground" Value="{DynamicResource GrayBrush7}" />
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+            <Setter Property="VerticalContentAlignment" Value="Center" />
+        </Style>
     </Application.Resources>
 </Application>
