--- a/WPF/WPF/MainWindow.xaml
+++ b/WPF/WPF/MainWindow.xaml
@@ -4,8 +4,30 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:vm="clr-namespace:ViewModel;assembly=ViewModel"
+        xmlns:views="clr-namespace:WPF_UserControls;assembly=WPF_UserControls"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        WindowStartupLocation="CenterScreen"
+        Title="MainWindow" Height="440" Width="800">
+    <Window.Resources>
+        <DataTemplate DataType="{x:Type vm:LoanConfirmationViewModel}">
+            <views:Loading/>
+        </DataTemplate>
+        <DataTemplate DataType="{x:Type vm:LargeDataViewModel}">
+            <views:LargeData/>
+        </DataTemplate>
+        <DataTemplate DataType="{x:Type vm:CustomerViewModel}">
+            <views:Customer/>
+        </DataTemplate>
+        <Style TargetType="ContentControl">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="ContentControl">
+                        <ContentPresenter/>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </Window.Resources>
     <Window.DataContext>
         <vm:MainViewModel/>
     </Window.DataContext>
@@ -21,7 +43,7 @@
             <ColumnDefinition/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
-        <ContentControl Grid.ColumnSpan="5" />
-        <Button Grid.Row="1" Content="Render" Click="btnRender_Click"/>
+        <ContentControl Grid.ColumnSpan="5" Content="{Binding CurrentViewModel}"/>
+        <Button Grid.Row="1" Content="Cycle through Vms" Command="{Binding CycleVmsCommand}"/>
     </Grid>
 </Window>
