--- a/WPF/WPF_UserControls/Customer.xaml
+++ b/WPF/WPF_UserControls/Customer.xaml
@@ -1,11 +1,56 @@
-﻿<UserControl x:Class="WPF_UserControls.Customer"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:WPF_UserControls"
-             mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+﻿<UserControl
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+    xmlns:local="clr-namespace:WPF_UserControls"
+    xmlns:vm="clr-namespace:ViewModel;assembly=ViewModel"
+    xmlns:drag="clr-namespace:WPF_UserControls.DragAndDrop.Behaviours"
+    xmlns:converters="clr-namespace:WPF_UserControls.Converters"
+    xmlns:sys="clr-namespace:System;assembly=mscorlib"
+    xmlns:b="http://schemas.microsoft.com/xaml/behaviors" x:Class="WPF_UserControls.Customer"
+    mc:Ignorable="d" 
+    IsEnabled="False"
+    d:DataContext="{d:DesignInstance vm:CustomerViewModel, IsDesignTimeCreatable=True}"
+    Background="WhiteSmoke"
+    d:DesignHeight="450" d:DesignWidth="800">
+    <UserControl.Resources>
+        <converters:StringVisibilityConverter x:Key="StringVisibilityConverter" WhenNull="Visible" WhenNotNullOrEmpty="Collapsed"/>
+        <Style TargetType="TextBox">
+            <Setter Property="UndoLimit" Value="10"/>
+            <Setter Property="Margin" Value="0, 2"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type TextBox}">
+                        <Border x:Name="border" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}" SnapsToDevicePixels="True">
+                            <Grid>
+                                <ScrollViewer x:Name="PART_ContentHost" Focusable="False" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto"/>
+                                <TextBlock x:Name="PART_Placeholder" Text="Please enter" Opacity="0.35">
+                                    <TextBlock.Visibility>
+                                        <MultiBinding Converter="{StaticResource StringVisibilityConverter}">
+                                            <Binding Path="Text" RelativeSource="{RelativeSource Mode=FindAncestor, AncestorType=TextBox}"/>
+                                            <Binding Path="IsKeyboardFocused" RelativeSource="{RelativeSource Mode=FindAncestor, AncestorType=TextBox}"/>
+                                        </MultiBinding>
+                                    </TextBlock.Visibility>
+                                </TextBlock>
+                            </Grid>
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsEnabled" Value="False">
+                                <Setter Property="Opacity" TargetName="border" Value="0.56"/>
+                            </Trigger>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter Property="BorderBrush" TargetName="border" Value="#FF7EB4EA"/>
+                            </Trigger>
+                            <Trigger Property="IsKeyboardFocused" Value="True">
+                                <Setter Property="BorderBrush" TargetName="border" Value="#FF569DE5"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </UserControl.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition/>
@@ -20,9 +65,14 @@
         <TextBlock Text="Name:"/>
         <TextBlock Text="Surname:" Grid.Row="1"/>
         <TextBlock Text="DOB:" Grid.Row="2"/>
+        <Border BorderBrush="Green" BorderThickness="5">
+            <TextBlock FontSize="100" TextTrimming="CharacterEllipsis">
+        Hel<Border SizeChanged="Viewbox_SizeChanged" Width="20" Height="75" Background="Red" BorderBrush="Blue" BorderThickness="5"/>lo!
+            </TextBlock>
+        </Border>
 
-        <TextBox Grid.Column="1" Grid.Row="0"/>
-        <TextBox Grid.Column="1" Grid.Row="1"/>
-        <TextBox Grid.Column="1" Grid.Row="2"/>
+        <TextBox Grid.Column="1" Grid.Row="0" Text="{Binding FirstName}" AcceptsReturn="True" VerticalAlignment="Top"/>
+        <TextBox Grid.Column="1" Grid.Row="1" Text="{Binding Surname}" AcceptsReturn="True" VerticalAlignment="Top"/>
+        <TextBox Grid.Column="1" Grid.Row="2" Text="{Binding DOB, StringFormat=\{0:D\}}" AcceptsReturn="True" VerticalAlignment="Top"/>
     </Grid>
 </UserControl>
