--- a/WPF/WPF_UserControls/LargeData.xaml
+++ b/WPF/WPF_UserControls/LargeData.xaml
@@ -1,16 +1,18 @@
-﻿<UserControl x:Class="WPF_UserControls.LargeData"
+﻿<UserControl
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:WPF_UserControls"
              xmlns:vm="clr-namespace:ViewModel;assembly=ViewModel"
+            xmlns:models="clr-namespace:Models;assembly=Models"
+             x:Class="WPF_UserControls.LargeData"
              mc:Ignorable="d" 
-             d:DesignHeight="250" d:DesignWidth="800" d:DataContext="{d:DesignInstance vm:LargeDataViewModel}">
-    <ListView ItemsSource="{Binding Products}" VirtualizingPanel.IsVirtualizing="False">
+             d:DesignHeight="250" d:DesignWidth="800" d:DataContext="{d:DesignInstance {x:Type vm:LargeDataViewModel}}">
+    <ListView ItemsSource="{Binding Products}" VirtualizingPanel.IsVirtualizing="True">
         <ListView.View>
             <GridView>
-                <GridViewColumn Header="Lender" DisplayMemberBinding="{Binding LenderName}"/>
+                <GridViewColumn Header="Lender" DisplayMemberBinding="{Binding (models:FixedProduct.LenderName)}"/>
                 <GridViewColumn Header="Plan Name" DisplayMemberBinding="{Binding PlanName}"/>
                 <GridViewColumn Header="Fixed Repayment" DisplayMemberBinding="{Binding FixedPayment}"/>
                 <GridViewColumn Header="Fixed Rate" DisplayMemberBinding="{Binding FixedRate}"/>
