--- a/WPF/WPF/MainWindow.xaml
+++ b/WPF/WPF/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:vm="clr-namespace:ViewModel;assembly=ViewModel"
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
-        Title="Title For Sebastian" Height="440" Width="800">
+        Title="MainWindow" Height="440" Width="800">
     <Window.DataContext>
         <vm:MainViewModel/>
     </Window.DataContext>
