--- a/WPF/WPF/MainWindow.xaml
+++ b/WPF/WPF/MainWindow.xaml
@@ -52,6 +52,6 @@
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
         <ContentControl Grid.ColumnSpan="5" Content="{Binding CurrentViewModel}"/>
-        <Button Grid.Row="1" Content="Cycle through Vms" Command="{Binding CycleVmsCommand}"/>
+        <Button Grid.Row="1" Grid.Column="0" Content="Cycle through Vms" Command="{Binding CycleVmsCommand}"/>
     </Grid>
 </Window>
