--- a/WPF/WPF/MainWindow.xaml
+++ b/WPF/WPF/MainWindow.xaml
@@ -7,9 +7,11 @@
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
         Title="MainWindow" Height="440" Width="800">
+
     <Window.DataContext>
         <vm:MainViewModel/>
     </Window.DataContext>
+
     <Window.Resources>
         <Style TargetType="ContentControl">
             <Setter Property="Template">
@@ -28,7 +30,12 @@
                                 </ItemsControl.ItemsPanel>
                                 <ItemsControl.ItemTemplate>
                                     <DataTemplate>
-                                        <TextBlock Text="{Binding Title}" Margin="0, 0, 40, 0"/>
+                                        <Button 
+                                            Margin="4, 0"
+                                            Content="{Binding Title}"
+                                            Command="{Binding DataContext.SwitchVmCommand, RelativeSource={RelativeSource AncestorType={x:Type Window}}}"
+                                            CommandParameter="{Binding Title}">
+                                        </Button>
                                     </DataTemplate>
                                 </ItemsControl.ItemTemplate>
                             </ItemsControl>
@@ -39,6 +46,7 @@
             </Setter>
         </Style>
     </Window.Resources>
+
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition/>
