--- a/WPF/WPF/MainWindow.xaml
+++ b/WPF/WPF/MainWindow.xaml
@@ -34,7 +34,7 @@
                                             Margin="4, 0"
                                             Content="{Binding Title}"
                                             Command="{Binding DataContext.SwitchVmCommand, RelativeSource={RelativeSource AncestorType={x:Type Window}}}"
-                                            CommandParameter="{Binding Title}">
+                                            CommandParameter="{Binding .}">
                                             <Button.Template>
                                                 <ControlTemplate TargetType="{x:Type Button}">
                                                     <Border BorderThickness="{Binding BreadcrumbBorder.BorderThickness}"
