Feature/breadcrumbs and commands (#2)
* Moved the viewmodel and model into .net standard. Implemented relay command and data template

* Added base model with db connection and code first db generation using ef core

* Added database name so we don't create tables in master db

* Apparently Migrate() does it all for us to have the db created and the migrations applied

* Added a project to start on API, so we can expose the Model through json as well as .NET Standard assembly.

* Adde a note about hositng the .NET Core API in a windows service

* App now works with WPF picking up VM and M being .Net Standard.

* Started on printing

* fixed spelling

* Fixed size of columns in flow document, it seems that by default flow doc will have 2 columns and their width is set to 50% of the documents width, this causes added elements to occupy only half of the document.

* Playing around with graphical aspects of print out

* First successful attempt to print out a pdf

* We can now print a table across multiple pages

* Removed explicit sizes

* Text is now being split across pages using Run. When using a TextBlock the text gets moved onto another page where it can fit or not displayed at all if it is too big

* misc

* Fixed models

* Added unity IoC and started on functionality change

* Added text box with placeholder and incremented .NET Framework version to 4.8

* Changed commands and moved API to .NET 5

* Some tests

* Clean up missing grid column assignment

* Interim check-in for phase 1 of breadcrumb changes

* Complete the requirements for this feature as set by the client

* Incorporate elegant changes from The Man

Co-authored-by: Lukasz Banach <jaworekplay@gmail.com>
Co-authored-by: Lukasz Banach <LukaszBanach@fluentmoney.co.uk>

--- a/WPF/WPF/MainWindow.xaml
+++ b/WPF/WPF/MainWindow.xaml
@@ -3,10 +3,72 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WPF"
+        xmlns:vm="clr-namespace:ViewModel;assembly=ViewModel"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        WindowStartupLocation="CenterScreen"
+        Title="MainWindow" Height="440" Width="800">
+
+    <Window.DataContext>
+        <vm:MainViewModel/>
+    </Window.DataContext>
+
+    <Window.Resources>
+        <Style TargetType="ContentControl">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="ContentControl">
+                        <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto"/>
+                                <RowDefinition/>
+                            </Grid.RowDefinitions>
+                            <ItemsControl ItemsSource="{Binding Breadcrumbs}">
+                                <ItemsControl.ItemsPanel>
+                                    <ItemsPanelTemplate>
+                                        <StackPanel Orientation="Horizontal"/>
+                                    </ItemsPanelTemplate>                                    
+                                </ItemsControl.ItemsPanel>
+                                <ItemsControl.ItemTemplate>
+                                    <DataTemplate>
+                                        <Button 
+                                            Margin="4, 0"
+                                            Content="{Binding Title}"
+                                            Command="{Binding DataContext.SwitchVmCommand, RelativeSource={RelativeSource AncestorType={x:Type Window}}}"
+                                            CommandParameter="{Binding .}">
+                                            <Button.Template>
+                                                <ControlTemplate TargetType="{x:Type Button}">
+                                                    <Border BorderThickness="{Binding BreadcrumbBorder.BorderThickness}"
+                                                            BorderBrush="{Binding BreadcrumbBorder.BorderBrush}"
+                                                            SnapsToDevicePixels="True">
+                                                        <ContentPresenter></ContentPresenter>
+                                                    </Border>
+                                                </ControlTemplate>
+                                            </Button.Template>
+                                        </Button>
+                                    </DataTemplate>
+                                </ItemsControl.ItemTemplate>
+                            </ItemsControl>
+                            <ContentPresenter Grid.Row="1"/>
+                        </Grid>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </Window.Resources>
+
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <ContentControl Grid.ColumnSpan="5" Content="{Binding CurrentViewModel}"/>
+        <Button Grid.Row="1" Grid.Column="0" Content="Cycle through Vms" Command="{Binding CycleVmsCommand}"/>
     </Grid>
 </Window>
